# AoC2021

./: Cargo.toml  README.md
src/: lib.rs  main.rs
