[package]
name = "AoC2021"
version = "0.1.0"
authors = ["nanderstabel <nanderstabel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"

[dependencies]
itertools = "0.10.1"
derive_more = "0.99.17"
array_tool = "1.0.3"
phf = { version = "0.10", features = ["macros"] }
anyhow = "1.0.51"
